--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,15 +24,14 @@ logging:
 # Server configuration
 server:
   port: 8080 #set your port
-# Swagger configuration
-springdoc:
-  swagger-ui:
-    path: /swagger-ui.html # swagger-ui custom path
-  api-docs:
-    path: /v3/api-docs.yaml
 
 #API
 weather.api:
   token: 3e3f38adc7cd3182c5cca0a70a33bc2e
   urls:
     current: http://api.weatherstack.com/current?query={query}&units={units}
+
+openapi:
+  title: Admin Panel
+  version: 1.0.0
+  description: This is  pre from end UI
